ORC-581:[C++] Verify fieldNames size for STRUCT types

For STRUCT types, fieldNames size can be different than subTypes size in a corrupt file. We should verify it to avoid crash.

This fixes #465